--- a/package.json
+++ b/package.json
@@ -7,9 +7,25 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx,.astro"
   },
   "dependencies": {
-    "astro": "^2.1.8"
+    "@astrojs/image": "^0.16.3",
+    "@astrojs/mdx": "^0.18.2",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.8",
+    "sharp": "^0.32.0",
+    "tailwind-merge": "^1.11.0",
+    "tailwindcss": "^3.3.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-astro": "^0.26.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-tailwindcss": "^3.10.1",
+    "typescript": "^5.0.2"
   }
 }
