--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/image": "^0.16.3",
     "@astrojs/mdx": "^0.18.2",
+    "@astrojs/partytown": "^1.2.0",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.8",
     "sharp": "^0.32.0",
