--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.9",
+    "astro-i18next": "1.0.0-beta.21",
+    "i18next": "^22.4.13",
+    "i18next-fs-backend": "^2.1.1",
     "sharp": "^0.32.0",
     "tailwind-merge": "^1.11.0",
     "tailwindcss": "^3.3.1"
